syntax = "proto3";

option csharp_namespace = "amznStore.Services.Discount.Grpc.Protos";

import "google/protobuf/timestamp.proto";
import "customTypes.proto";

service DiscountProtoService {
    rpc GetDiscount (GetDiscountRequest) returns (CouponModel);
    rpc VerifyDiscount (VerifyDiscountRequest) returns (CouponModel);
    rpc CreateDiscount (CreateDiscountRequest) returns (CouponModel);
    rpc UpdateDiscount (UpdateDiscountRequest) returns (CouponModel);
    rpc DeleteDiscount (DeleteDiscountRequest) returns (DeleteDiscountResponse);
}

message CouponModel {
    int32 Id = 1;
    string CategoryName = 2;
    string CouponCode = 3;
    customTypes.DecimalValue DiscountPercentage = 4;
    google.protobuf.Timestamp ValidTill = 5;
}

message GetDiscountRequest {
    int32 Id = 1;
}

message VerifyDiscountRequest {
  string couponCode = 1;
}

message CreateDiscountRequest {
  CouponModel coupon = 1;
}

message UpdateDiscountRequest {
  CouponModel coupon = 1;
}

message DeleteDiscountRequest {
  int32 Id = 1;
}

message DeleteDiscountResponse {
  bool success = 1;
}
